--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
+    "marked-react": "^2.0.0",
     "papaparse": "^5.4.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
