--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,8 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
-  "display_override": ["fullscreen","minimal-ui"],
+  "display": "fullscreen",
+  "display_override": ["fullscreen","minimal-ui","standalone"],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "screenshots": [
