--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "TouhouFest",
   "name": "TouhouFest 2024 Schedule",
+  "description":"Digital schedule for TouhouFest with events, bookmarks, filters, and more",
   "icons": [
     {
         "src": "/android-chrome-192x192.png",
@@ -14,8 +15,8 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
-  "display_override": ["fullscreen","minimal-ui"],
+  "display": "fullscreen",
+  "display_override": ["fullscreen","minimal-ui","standalone"],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "screenshots": [
