--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "TouhouFest",
   "name": "TouhouFest 2024 Schedule",
+  "description":"Digital schedule for TouhouFest with events, bookmarks, filters, and more",
   "icons": [
     {
         "src": "/android-chrome-192x192.png",
