--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,13 +6,22 @@
     {
         "src": "/android-chrome-192x192.png",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose":"maskable"
     },
     {
         "src": "/android-chrome-384x384.png",
         "sizes": "384x384",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose":"maskable"
+    },
+    {
+        "src": "/android-chrome-384x384.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose":"maskable"
     }
+
   ],
   "start_url": ".",
   "display": "fullscreen",
