--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,7 @@
     {
         "src": "/android-chrome-192x192.png",
         "sizes": "192x192",
-        "type": "image/png",
-        "purpose":"maskable"
+        "type": "image/png"
     },
     {
         "src": "/android-chrome-384x384.png",
