--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "marked-react": "^2.0.0",
@@ -22,6 +26,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "source-map-explorer": "^2.5.3",
+    "typescript": "^4.9.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
