--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
   "devDependencies": {
     "gh-pages": "^6.1.1",
     "react-scripts": "5.0.1"
+  },
+  "overrides": {
+    "typescript": "^5.4.5"
   }
 }
