very basic and probably broken tamagui setup?

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,22 @@ yarn-error.log*
 
 expo-env.d.ts
 # @end expo-cli
+
+node_modules/
+.tamagui
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+.yarn
+
+# macOS
+.DS_Store
+
+yarn-error.log
