--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/babel-plugin": "^1.104.2",
+    "@tamagui/config": "^1.104.2",
+    "@tamagui/metro-plugin": "^1.104.2",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
