--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -14,7 +17,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "bootstrap": "^5.2.3",
@@ -71,11 +73,10 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.2",
+    "@types/node": "^22.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "gh-pages": "^6.1.1",
     "vite": "^5.4.2"
-  },
-  "overrides": {
-    "typescript": "^5.4.5"
   }
 }
