--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/react-router": "^5.1.20",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "marked-react": "^2.0.0",
@@ -81,6 +82,7 @@
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.1.2",
     "@types/node": "^22.5.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "gh-pages": "^6.1.1",
     "vite": "^5.4.2"
